force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>請求</label>
    <nameField>
        <displayFormat>B-{000000000}</displayFormat>
        <label>請求ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>