force-app/main/default/objects/Billing__c/fields/AbroadHouseOwnerTaxWithholding__c.field-meta.xml
<CustomField>
    <fullName>AbroadHouseOwnerTaxWithholding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>海外住居家主源泉</label>
    <type>Checkbox</type>
</CustomField>