force-app/main/default/objects/Billing__c/fields/AgencyPaymentAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>AgencyPaymentAmountTotal__c</fullName>
    <label>代行支払金額計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>