force-app/main/default/objects/Billing__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>実入金口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>請求 (実入金口座)</relationshipLabel>
    <relationshipName>BankAccount_Billing2</relationshipName>
    <type>Lookup</type>
</CustomField>