force-app/main/default/objects/Billing__c/fields/BillingDestinationCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingDestinationCategory__c</fullName>
    <label>請求先区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>