force-app/main/default/objects/Billing__c/fields/BillingIsDateTime__c.field-meta.xml
<CustomField>
    <fullName>BillingIsDateTime__c</fullName>
    <label>請求フラグ日時</label>
    <type>DateTime</type>
</CustomField>