force-app/main/default/objects/Billing__c/fields/BillingIsPerson__c.field-meta.xml
<CustomField>
    <fullName>BillingIsPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求フラグ者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Billing5</relationshipName>
    <type>Lookup</type>
</CustomField>