force-app/main/default/objects/Billing__c/fields/BillingNo__c.field-meta.xml
<CustomField>
    <fullName>BillingNo__c</fullName>
    <label>売上請求No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>