force-app/main/default/objects/Billing__c/fields/BillNo__c.field-meta.xml
<CustomField>
    <fullName>BillNo__c</fullName>
    <label>請求書No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>