force-app/main/default/objects/Billing__c/fields/BillNoOriginal__c.field-meta.xml
<CustomField>
    <fullName>BillNoOriginal__c</fullName>
    <label>売上請求No本体</label>
    <length>255</length>
    <type>Text</type>
</CustomField>