force-app/main/default/objects/Billing__c/fields/Cancel__c.field-meta.xml
<CustomField>
    <fullName>Cancel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約申入</label>
    <referenceTo>Cancel__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>Cancel_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>