force-app/main/default/objects/Billing__c/fields/Check5Percent__c.field-meta.xml
<CustomField>
    <fullName>Check5Percent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェック５パー</label>
    <type>Checkbox</type>
</CustomField>