force-app/main/default/objects/Billing__c/fields/CollectBankAccount__c.field-meta.xml
<CustomField>
    <fullName>CollectBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回収口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>BankAccount_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>