force-app/main/default/objects/Billing__c/fields/CollectCharge__c.field-meta.xml
<CustomField>
    <fullName>CollectCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回収担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>