force-app/main/default/objects/Billing__c/fields/CollectMethodOther__c.field-meta.xml
<CustomField>
    <fullName>CollectMethodOther__c</fullName>
    <label>回収後処理方法_その他</label>
    <type>TextArea</type>
</CustomField>