force-app/main/default/objects/Billing__c/fields/CollectType__c.field-meta.xml
<CustomField>
    <fullName>CollectType__c</fullName>
    <label>回収種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>