force-app/main/default/objects/Billing__c/fields/CollectTypeOtherContent1__c.field-meta.xml
<CustomField>
    <fullName>CollectTypeOtherContent1__c</fullName>
    <label>回収種別その他内容１</label>
    <type>TextArea</type>
</CustomField>