force-app/main/default/objects/Billing__c/fields/CompletedIs__c.field-meta.xml
<CustomField>
    <fullName>CompletedIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完了ﾌﾗｸﾞ</label>
    <type>Checkbox</type>
</CustomField>