force-app/main/default/objects/Billing__c/fields/ConditionChange__c.field-meta.xml
<CustomField>
    <fullName>ConditionChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更</label>
    <referenceTo>ConditionChange__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>ConditionChange_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>