force-app/main/default/objects/Billing__c/fields/ConsignmentFeeCheck__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeCheck__c</fullName>
    <label>委託料チェック</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>