force-app/main/default/objects/Billing__c/fields/ConsignmentSubtotal__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentSubtotal__c</fullName>
    <label>委小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>