force-app/main/default/objects/Billing__c/fields/ConsignmentTaxTotal__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentTaxTotal__c</fullName>
    <label>委消費税計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>