force-app/main/default/objects/Billing__c/fields/ContractMonth__c.field-meta.xml
<CustomField>
    <fullName>ContractMonth__c</fullName>
    <label>契約月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>