force-app/main/default/objects/Billing__c/fields/CorrectionPerson__c.field-meta.xml
<CustomField>
    <fullName>CorrectionPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>修正者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Billing2</relationshipName>
    <type>Lookup</type>
</CustomField>