force-app/main/default/objects/Billing__c/fields/CorrectionTime__c.field-meta.xml
<CustomField>
    <fullName>CorrectionTime__c</fullName>
    <label>修正時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>