force-app/main/default/objects/Billing__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Billing3</relationshipName>
    <type>Lookup</type>
</CustomField>