force-app/main/default/objects/Billing__c/fields/CreatedDateDisplay__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateDisplay__c</fullName>
    <label>作成日表示</label>
    <type>Date</type>
</CustomField>