force-app/main/default/objects/Billing__c/fields/DebitDate__c.field-meta.xml
<CustomField>
    <fullName>DebitDate__c</fullName>
    <label>引落日</label>
    <type>Date</type>
</CustomField>