force-app/main/default/objects/Billing__c/fields/DecisionApplication2__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplication2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請2</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>DecisionApplication_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>