force-app/main/default/objects/Billing__c/fields/DepositDate__c.field-meta.xml
<CustomField>
    <fullName>DepositDate__c</fullName>
    <label>入金日</label>
    <type>Date</type>
</CustomField>