force-app/main/default/objects/Billing__c/fields/Deposits__c.field-meta.xml
<CustomField>
    <fullName>Deposits__c</fullName>
    <label>入金額入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>