force-app/main/default/objects/Billing__c/fields/DesignatedScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>DesignatedScheduledDate__c</fullName>
    <label>指定予定日</label>
    <type>Date</type>
</CustomField>