force-app/main/default/objects/Billing__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社員名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>Contact_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>