force-app/main/default/objects/Billing__c/fields/FinanceBillingDataId__c.field-meta.xml
<CustomField>
    <fullName>FinanceBillingDataId__c</fullName>
    <label>経理請求データID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>