force-app/main/default/objects/Billing__c/fields/FinanceBillingDataIdG__c.field-meta.xml
<CustomField>
    <fullName>FinanceBillingDataIdG__c</fullName>
    <label>経理請求データID一時G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>