force-app/main/default/objects/Billing__c/fields/IntegrationBillingNo__c.field-meta.xml
<CustomField>
    <fullName>IntegrationBillingNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>統合請求</label>
    <referenceTo>IntegrationBilling__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>IntegrationBill_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>