force-app/main/default/objects/Billing__c/fields/IrregularIndividualRemittance__c.field-meta.xml
<CustomField>
    <fullName>IrregularIndividualRemittance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>イレギュラー個別送金</label>
    <type>Checkbox</type>
</CustomField>