force-app/main/default/objects/Billing__c/fields/IsAccountUnMatch__c.field-meta.xml
<CustomField>
    <fullName>IsAccountUnMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>支払先名と企業名アンマッチ</label>
    <type>Checkbox</type>
</CustomField>