force-app/main/default/objects/Billing__c/fields/IsCollected__c.field-meta.xml
<CustomField>
    <fullName>IsCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回収フラグ</label>
    <type>Checkbox</type>
</CustomField>