force-app/main/default/objects/Billing__c/fields/IsFastening__c.field-meta.xml
<CustomField>
    <fullName>IsFastening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>締めﾌﾗｸﾞ</label>
    <type>Checkbox</type>
</CustomField>