force-app/main/default/objects/Billing__c/fields/IsFasteningPerson__c.field-meta.xml
<CustomField>
    <fullName>IsFasteningPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>締めフラグ者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Billing4</relationshipName>
    <type>Lookup</type>
</CustomField>