force-app/main/default/objects/Billing__c/fields/ManualInputNum__c.field-meta.xml
<CustomField>
    <fullName>ManualInputNum__c</fullName>
    <label>手入力件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>