force-app/main/default/objects/Billing__c/fields/Memo1__c.field-meta.xml
<CustomField>
    <fullName>Memo1__c</fullName>
    <label>システム一時メモ１</label>
    <type>TextArea</type>
</CustomField>