force-app/main/default/objects/Billing__c/fields/MizuhoChargesUnMatch__c.field-meta.xml
<CustomField>
    <fullName>MizuhoChargesUnMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>みずほ手数料アンマッチ</label>
    <type>Checkbox</type>
</CustomField>