force-app/main/default/objects/Billing__c/fields/NewBillingNo__c.field-meta.xml
<CustomField>
    <fullName>NewBillingNo__c</fullName>
    <label>新規請求No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>