force-app/main/default/objects/Billing__c/fields/NotePreparation__c.field-meta.xml
<CustomField>
    <fullName>NotePreparation__c</fullName>
    <label>備考準備</label>
    <length>255</length>
    <type>Text</type>
</CustomField>