force-app/main/default/objects/Billing__c/fields/NotPayment__c.field-meta.xml
<CustomField>
    <fullName>NotPayment__c</fullName>
    <label>未入金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>