force-app/main/default/objects/Billing__c/fields/OccurrenceTaxRate__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceTaxRate__c</fullName>
    <label>発生時税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>