force-app/main/default/objects/Billing__c/fields/OneTimeFinanceSlipNo__c.field-meta.xml
<CustomField>
    <fullName>OneTimeFinanceSlipNo__c</fullName>
    <label>一時経理伝票No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>