force-app/main/default/objects/Billing__c/fields/OneTimeSlipType__c.field-meta.xml
<CustomField>
    <fullName>OneTimeSlipType__c</fullName>
    <label>一時伝票区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>