force-app/main/default/objects/Billing__c/fields/OtherBillingNo__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingNo__c</fullName>
    <label>他請求No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>