force-app/main/default/objects/Billing__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>支払日</label>
    <type>Date</type>
</CustomField>