force-app/main/default/objects/Billing__c/fields/PaymentScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentScheduledDate__c</fullName>
    <label>入金予定日</label>
    <type>Date</type>
</CustomField>