force-app/main/default/objects/Billing__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>電話</label>
    <type>Phone</type>
</CustomField>