force-app/main/default/objects/Billing__c/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件名</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>RealEstate_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>