force-app/main/default/objects/Billing__c/fields/ReimbursementAmountCopy__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementAmountCopy__c</fullName>
    <label>立替金額転記</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>