force-app/main/default/objects/Billing__c/fields/ReminderAfterPaymentScheduledDate1__c.field-meta.xml
<CustomField>
    <fullName>ReminderAfterPaymentScheduledDate1__c</fullName>
    <label>督促後入金予定日１</label>
    <type>Date</type>
</CustomField>