force-app/main/default/objects/Billing__c/fields/ReminderAfterPaymentScheduledDate2__c.field-meta.xml
<CustomField>
    <fullName>ReminderAfterPaymentScheduledDate2__c</fullName>
    <label>督促後入金予定日２</label>
    <type>Date</type>
</CustomField>