force-app/main/default/objects/Billing__c/fields/ReminderAfterPaymentScheduledDate3__c.field-meta.xml
<CustomField>
    <fullName>ReminderAfterPaymentScheduledDate3__c</fullName>
    <label>督促後入金予定日３</label>
    <type>Date</type>
</CustomField>