force-app/main/default/objects/Billing__c/fields/ReminderContent2__c.field-meta.xml
<CustomField>
    <fullName>ReminderContent2__c</fullName>
    <label>督促内容２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>