force-app/main/default/objects/Billing__c/fields/ReminderContent3__c.field-meta.xml
<CustomField>
    <fullName>ReminderContent3__c</fullName>
    <label>督促内容３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>