force-app/main/default/objects/Billing__c/fields/ReminderDate2__c.field-meta.xml
<CustomField>
    <fullName>ReminderDate2__c</fullName>
    <label>督促日２</label>
    <type>Date</type>
</CustomField>