force-app/main/default/objects/Billing__c/fields/ReminderDate3__c.field-meta.xml
<CustomField>
    <fullName>ReminderDate3__c</fullName>
    <label>督促日３</label>
    <type>Date</type>
</CustomField>