force-app/main/default/objects/Billing__c/fields/RemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceDate__c</fullName>
    <label>送金日</label>
    <type>Date</type>
</CustomField>