force-app/main/default/objects/Billing__c/fields/RenewalNoticeNo__c.field-meta.xml
<CustomField>
    <fullName>RenewalNoticeNo__c</fullName>
    <label>更新通知No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>