force-app/main/default/objects/Billing__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家賃</label>
    <referenceTo>Rent__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>Rent_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>