force-app/main/default/objects/Billing__c/fields/RentConsignmentBillingCode__c.field-meta.xml
<CustomField>
    <fullName>RentConsignmentBillingCode__c</fullName>
    <label>家賃委託繰返請求コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>