force-app/main/default/objects/Billing__c/fields/ReSendingNum__c.field-meta.xml
<CustomField>
    <fullName>ReSendingNum__c</fullName>
    <label>再発送番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>