force-app/main/default/objects/Billing__c/fields/SendDisplayDocumentName__c.field-meta.xml
<CustomField>
    <fullName>SendDisplayDocumentName__c</fullName>
    <label>送付状表示書類名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>