force-app/main/default/objects/Billing__c/fields/SlipCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>SlipCategoryCode__c</fullName>
    <label>伝票区分コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>