force-app/main/default/objects/Billing__c/fields/SlipTypeCategoryBillingNo__c.field-meta.xml
<CustomField>
    <fullName>SlipTypeCategoryBillingNo__c</fullName>
    <label>伝票区分請求No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>