force-app/main/default/objects/Billing__c/fields/SupportCategory__c.field-meta.xml
<CustomField>
    <fullName>SupportCategory__c</fullName>
    <label>補助区分</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperationCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>更新</fullName>
            </value>
            <value>
                <fullName>入替</fullName>
            </value>
            <value>
                <fullName>預託金</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>サカイ</fullName>
            </value>
            <value>
                <fullName>アート</fullName>
            </value>
            <value>
                <fullName>日通</fullName>
            </value>
            <value>
                <fullName>ハート</fullName>
            </value>
            <value>
                <fullName>エーエルプラス</fullName>
            </value>
            <value>
                <fullName>立替</fullName>
            </value>
            <value>
                <fullName>名義変更</fullName>
            </value>
            <value>
                <fullName>振込</fullName>
            </value>
            <value>
                <fullName>郵送</fullName>
            </value>
            <value>
                <fullName>マンスリー</fullName>
            </value>
            <value>
                <fullName>立会</fullName>
            </value>
            <value>
                <fullName>購入手配</fullName>
            </value>
            <value>
                <fullName>引越手配</fullName>
            </value>
            <value>
                <fullName>保険</fullName>
            </value>
            <value>
                <fullName>レンタル</fullName>
            </value>
            <value>
                <fullName>購入費用</fullName>
            </value>
            <value>
                <fullName>引越</fullName>
            </value>
            <value>
                <fullName>修繕</fullName>
            </value>
            <value>
                <fullName>手当</fullName>
            </value>
            <value>
                <fullName>交通費</fullName>
            </value>
            <value>
                <fullName>安否確認</fullName>
            </value>
            <value>
                <fullName>株主優待</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>