force-app/main/default/objects/Billing__c/fields/TicketNo__c.field-meta.xml
<CustomField>
    <fullName>TicketNo__c</fullName>
    <label>伝票No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>