force-app/main/default/objects/Billing__c/fields/UrDebitDate__c.field-meta.xml
<CustomField>
    <fullName>UrDebitDate__c</fullName>
    <label>公団引落日</label>
    <type>Date</type>
</CustomField>