force-app/main/default/objects/Billing__c/validationRules/DesignatedScheduledDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DesignatedScheduledDateCheck</fullName>
    <active>true</active>
    <description>指定予定日に過去日を入力できないようにする</description>
    <errorConditionFormula>DesignatedScheduledDate__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>指定予定日に過去日は入力できません。</errorMessage>
</ValidationRule>