force-app/main/default/objects/Billing__c/listViews/BillingProcessNotRegistrationList.listView-meta.xml
<ListView>
    <fullName>BillingProcessNotRegistrationList</fullName>
    <columns>NAME</columns>
    <columns>BillingDestinationName__c</columns>
    <columns>TargetYearMonth__c</columns>
    <columns>BillNo__c</columns>
    <columns>BillingAmountTotal__c</columns>
    <columns>OperationCategory__c</columns>
    <columns>SendScheduledDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProcessManagement__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TargetYearMonth__c</field>
        <operation>equals</operation>
    </filters>
    <label>請求工程未登録リスト</label>
</ListView>